// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $19.55
  </h1>
</div>
`;

exports[`should render summary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $195.22
  </h1>
</div>
`;
